# hrax

./: .gitignore  LICENSE.md  README.md  pyproject.toml
my_analysis/: analysis.py  args.py  benchmark.py  config.py  elparsers.py  entities.py  helpers.py  models.csv  models.py  prepare_data.py  prev.py  rankings.py  reports.py  run.py  runint.py
my_analysis/assets/css/: freshlooks.css
my_analysis/assets/js/: navbar.js
my_analysis/assets/templates/: bar.html  base.html  frontpage.html  modelpage.html  number.html  score.html  three-columns.html  two-columns.html
tests/: test_my_analysis.py
